progress jangan lup aubah warna background dan perbarui card gambar

--- a/public/index.html
+++ b/public/index.html
@@ -37,14 +37,13 @@
             transform: translateY(-10px);
         }
     }
-
 </style>
 <body>
 <!--Nav-->
 
 <nav x-data="{show:false}" class="w-full z-10" style="background-color: #268C72; position: fixed;">
     <div class="container mx-auto px-3 py-2 lg:px-20 flex items-center justify-between flex-wrap">
-        <div class="flex items-center flex-shrink-0 text-green-700 mr-20">
+        <div class="flex items-center flex-shrink-0 text-green-700 mr-6">
             <h1 class="font-bold  xl:text-4xl lg:text-3xl md:text-2xl tracking-tight text-white">SewaAC.co.id</h1>
         </div>
         <div class="block lg:hidden">
@@ -60,17 +59,17 @@
             class="w-full block flex-grow lg:flex lg:justify-end lg:w-auto">
             <div>
                 <a href="#beranda"
-                    class="block md:inline-block lg:inline-block lg:text-1xl px-1 2xl:text-2xl xl:px-3 xl:text-2xl py-2 leading-none rounded text-white hover:text-green-200 font-bold mt-4 lg:mt-0 filter drop-shadow-xl">Beranda</a>
+                    class="block lg:inline-block lg:text-1xl px-1 2xl:text-2xl xl:px-3 xl:text-2xl py-2 leading-none rounded text-white hover:text-green-200 font-bold mt-4 lg:mt-0 filter drop-shadow-xl">Beranda</a>
                 <a href="#layanan"
-                    class="block md:inline-block lg:inline-block lg:text-1xl px-1 2xl:text-2xl xl:px-3 xl:text-2xl py-2 leading-none rounded text-white hover:text-green-200 font-bold mt-4 lg:mt-0">Layanan</a>
+                    class="block lg:inline-block lg:text-1xl px-1 2xl:text-2xl xl:px-3 xl:text-2xl py-2 leading-none rounded text-white hover:text-green-200 font-bold mt-4 lg:mt-0">Layanan</a>
                     <a href="#produk"
-                    class="block md:inline-block lg:inline-block lg:text-1xl px-1 2xl:text-2xl xl:px-3 xl:text-2xl py-2 leading-none rounded text-white hover:text-green-200 font-bold mt-4 lg:mt-0">Produk</a>
+                    class="block lg:inline-block lg:text-1xl px-1 2xl:text-2xl xl:px-3 xl:text-2xl py-2 leading-none rounded text-white hover:text-green-200 font-bold mt-4 lg:mt-0">Produk</a>
                 <a href="#keunggulan"
-                    class="block md:inline-block lg:inline-block lg:text-1xl px-1 2xl:text-2xl xl:px-3 xl:text-2xl py-2 leading-none rounded text-white hover:text-green-200 font-bold mt-4 lg:mt-0">Keunggulan</a>
+                    class="block lg:inline-block lg:text-1xl px-1 2xl:text-2xl xl:px-3 xl:text-2xl py-2 leading-none rounded text-white hover:text-green-200 font-bold mt-4 lg:mt-0">Keunggulan</a>
                 <a href="#cabang"
-                    class="block md:inline-block lg:inline-block lg:text-1xl px-1 2xl:text-2xl xl:px-3 xl:text-2xl py-2 leading-none rounded text-white hover:text-green-200 font-bold mt-4 lg:mt-0">Kantor Cabang</a>
+                    class="block lg:inline-block lg:text-1xl px-1 2xl:text-2xl xl:px-3 xl:text-2xl py-2 leading-none rounded text-white hover:text-green-200 font-bold mt-4 lg:mt-0">Kantor Cabang</a>
                 <a href="#kontak"
-                    class="border block md:inline-block lg:inline-block lg:text-1xl xl:text-2xl px-6 py-3 leading-none rounded-tl-3xl rounded-br-3xl bg-gray-300 hover:text-gray-100 hover:bg-gray-400 mt-4 md:mt-0 tarnsition duration-300 font-bold text-green-700">Hubungi Kami</a>
+                    class="border block lg:inline-block lg:text-1xl xl:text-2xl px-4 py-3 leading-none rounded-tl-3xl rounded-br-3xl bg-gray-300 hover:text-gray-100 hover:bg-gray-400 mt-4 md:mt-0 tarnsition duration-300 font-bold text-green-700">Hubungi Kami</a>
             </div>
         </div>
     </div>
@@ -89,9 +88,8 @@
                     Kunjungi Kami</button>
                 </div>
             </div>
-            <div class="relative flex pt-10 2xl:pt-48 xl:pt-24 md:pt-24">
+            <div class="relative flex pt-10 2xl:pt-72 xl:pt-24 md:pt-24">
                 <img src="/public/img/undraw_Chilling_re_4iq9.svg" class="inline-photo" style="width: 100%; height: 100%; max-width: fit-content; max-height: fit-content;" alt="">
-                
             </div>
         </div>
     </div>
@@ -102,8 +100,7 @@
 <section id="layanan">
     <h1 class="md:text-2xl xl:text-4xl font-bold text-center md:pt-14 xl:pt-24">Layanan terbaik <strong class="text-green-700">Kami</strong></h1>
 <div class="flex items-start md:space-x-10">
-    <div class="p-10 grid sm:grid-cols-1 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-3 gap-7">
-        
+    <div class="p-10 grid sm:grid-cols-1 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-3 gap-7">  
         <!--Card 1-->
         <div data-aos="flip-left" data-aos-duration="1500" data-aos-offset="300">
         <div class="rounded overflow-hidden shadow-xl">
@@ -111,7 +108,7 @@
           <div class="px-6 py-4">
             <div class="font-bold md:text-xl xl:text-2xl mb-2 text-center font-Glory">Sewa Pendingin</div>
             <p class="text-gray-700 md:text-md xl:text-1xl text-center">
-              Kami memberikan solusi pendingin bagi rumah ataupun kantor. Kami memberikan pelayanan berupa pemasangan AC di tempat Anda, cepat dan tepat sesuai kebutuhan Anda.
+            Kami memberikan solusi pendingin bagi rumah ataupun kantor. Kami memberikan pelayanan berupa pemasangan AC di tempat Anda, cepat dan tepat sesuai kebutuhan Anda.
             </p>
           </div>
         </div>
@@ -137,7 +134,7 @@
           <div class="px-6 py-4">
             <div class="font-bold md:text-xl xl:text-2xl mb-2 text-center font-Glory">Servis pelanggan</div>
             <p class="text-gray-700 md:text-base xl:text-1xl text-center">
-              Kami memberikan pelayanan terbaik 7x24 jam, demi menjaga AC Anda tetap dingin dan sehingga Anda dapat merasa nyaman di rumah ataupun kantor
+            Kami memberikan pelayanan terbaik 7x24 jam, demi menjaga AC Anda tetap dingin dan sehingga Anda dapat merasa nyaman di rumah ataupun kantor
             </p>
           </div>
         </div>
@@ -150,14 +147,16 @@
 <!--produk-->
 <section id="produk">
 <div class="grid grid-cols-1 xl:grid-cols-2 md:grid-cols-1 2xl:grid-cols-2 pt-16">
-    <div class="grid 2xl:pt-24" style="background-image: url(/public/img/undraw_Relaxing_at_home_re_mror.png); background-size: cover;">
-        <p class="text-2xl text-center font-bold">Sesuaikan Produk Dengan Kebutuhan Anda</p>
-        <p class="text-center text-md 2xl:text-2xl">Berbagai Variasi produk untuk kebutuhan perusahaan anda</p>
-        <p class="text-center text-md p-3 2xl:text-2xl">Single Split | Multi Split | Air Purifer</p>
-        <p class="text-center text-md p-3 2xl:text-2xl">VRV Home Series | Multi NX-32</p>
-        <p class="text-center text-md p-3 2xl:text-2xl">Sky Air | VRV Control System</p>
+    <div class="grid 2xl:pt-24" style="background-image: url(/public/img/undraw_Relaxing_at_home_re_mror.png); background-size: cover; height: 31rem;">
+        <div>
+        <p class="text-1xl 2xl:text-3xl text-center font-bold md:pt-32 2xl:pt-1 md:p-3">Sesuaikan Produk Dengan Kebutuhan Anda</p>
+        <p class="text-center text-md md:p-2 2xl:text-1xl">Berbagai Variasi produk untuk kebutuhan perusahaan anda</p>
+        <p class="text-center text-md p-1 2xl:text-1xl xl:text-1xl">Single Split | Multi Split | Air Purifer</p>
+        <p class="text-center text-md p-1 2xl:text-1xl xl:text-1xl">VRV Home Series | Multi NX-32</p>
+        <p class="text-center text-md p-1 2xl:text-1xl xl:text-1xl">Sky Air | VRV Control System</p>
+        </div>
     </div>
-    <div class="grid">
+    <div>
         <div class=web-slider>
         <div class=isi-slider>
             <img src="/public/img/public-area.png"  alt="Gambar 1">
@@ -280,13 +279,11 @@
             </div>
             <button type="submit" class="bg-blue-500 hover:blue-700 text-white font-bold py-2 px-4 rounded">Kirim</button>
     </form>
-</div class="p-10 grid sm:grid-cols-1 md:grid-cols-1 lg:grid-cols-2 xl:grid-cols-2 gap-5">
-    <div class="border-t-2 border-red-500 shadow-lg">
+    </div>
+    <div class="border-t-2 border-red-500 shadow-lg md:h-96 xl:h-full 2xl:h-full lg:h-96 sm:h-72">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d991.7257076835634!2d106.83089342921527!3d-6.143752666319732!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f5f0446849bf%3A0x3f0461ea474813d2!2sPT.%20STHIRA%20NUSANTARA!5e0!3m2!1sid!2sid!4v1631157153916!5m2!1sid!2sid"  allowfullscreen="" loading="lazy" style="border:0; width: 100%; height: 100%;">
         </iframe>
     </div>
-</div>
-</div>
 </div>
 </section>
 
@@ -341,7 +338,7 @@
     <div class="" style="background-color: #047857;">
         <div class="container mx-auto px-6 lg:px-20 py-6">
             <div class="flex justify-center text-gray-700 mb-1">
-                @ 2021 <span class="font-bold">SewaAC.co.id</span> 2021 All right reserved
+                @ 2021 <span class="font-bold">SewaAC.co.id</span>All right reserved
             </div>
         </div>
     </div>
@@ -354,3 +351,4 @@
     </script>
 </body>
 </html>
+
