banyak perubahan terutama background dan card kota

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     </script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
-<title>Document</title>
+<title>SewaAC.co.id</title>
 </head>
 <style>
     @-webkit-keyframes up-down{
@@ -41,10 +41,10 @@
 <body>
 <!--Nav-->
 
-<nav x-data="{show:false}" class="w-full z-10" style="background-color: #268C72; position: fixed;">
+<nav x-data="{show:false}" class="w-full z-10" style="background-color: #FEAA52; position: fixed;">
     <div class="container mx-auto px-3 py-2 lg:px-20 flex items-center justify-between flex-wrap">
-        <div class="flex items-center flex-shrink-0 text-green-700 mr-6">
-            <h1 class="font-bold  xl:text-4xl lg:text-3xl md:text-2xl tracking-tight text-white">SewaAC.co.id</h1>
+        <div class="flex items-center flex-shrink-0 text-green-400 mr-6">
+            <h1 class="font-bold  xl:text-3xl lg:text-3xl md:text-2xl tracking-tight text-white">SewaAC.co.id</h1>
         </div>
         <div class="block lg:hidden">
             <button @click="show=!show"
@@ -59,17 +59,17 @@
             class="w-full block flex-grow lg:flex lg:justify-end lg:w-auto">
             <div>
                 <a href="#beranda"
-                    class="block lg:inline-block lg:text-1xl px-1 2xl:text-2xl xl:px-3 xl:text-2xl py-2 leading-none rounded text-white hover:text-green-200 font-bold mt-4 lg:mt-0 filter drop-shadow-xl">Beranda</a>
+                    class="block lg:inline-block lg:text-1xl px-1 2xl:text-2xl xl:px-3 xl:text-1xl py-2 leading-none rounded text-white hover:text-green-200 font-bold mt-4 lg:mt-0 filter drop-shadow-xl">Beranda</a>
                 <a href="#layanan"
-                    class="block lg:inline-block lg:text-1xl px-1 2xl:text-2xl xl:px-3 xl:text-2xl py-2 leading-none rounded text-white hover:text-green-200 font-bold mt-4 lg:mt-0">Layanan</a>
+                    class="block lg:inline-block lg:text-1xl px-1 2xl:text-2xl xl:px-3 xl:text-1xl py-2 leading-none rounded text-white hover:text-green-200 font-bold mt-4 lg:mt-0">Layanan</a>
                     <a href="#produk"
-                    class="block lg:inline-block lg:text-1xl px-1 2xl:text-2xl xl:px-3 xl:text-2xl py-2 leading-none rounded text-white hover:text-green-200 font-bold mt-4 lg:mt-0">Produk</a>
+                    class="block lg:inline-block lg:text-1xl px-1 2xl:text-2xl xl:px-3 xl:text-1xl py-2 leading-none rounded text-white hover:text-green-200 font-bold mt-4 lg:mt-0">Produk</a>
                 <a href="#keunggulan"
-                    class="block lg:inline-block lg:text-1xl px-1 2xl:text-2xl xl:px-3 xl:text-2xl py-2 leading-none rounded text-white hover:text-green-200 font-bold mt-4 lg:mt-0">Keunggulan</a>
+                    class="block lg:inline-block lg:text-1xl px-1 2xl:text-2xl xl:px-3 xl:text-1xl py-2 leading-none rounded text-white hover:text-green-200 font-bold mt-4 lg:mt-0">Keunggulan</a>
                 <a href="#cabang"
-                    class="block lg:inline-block lg:text-1xl px-1 2xl:text-2xl xl:px-3 xl:text-2xl py-2 leading-none rounded text-white hover:text-green-200 font-bold mt-4 lg:mt-0">Kantor Cabang</a>
+                    class="block lg:inline-block lg:text-1xl px-1 2xl:text-2xl xl:px-3 xl:text-1xl py-2 leading-none rounded text-white hover:text-green-200 font-bold mt-4 lg:mt-0">Kantor Cabang</a>
                 <a href="#kontak"
-                    class="border block lg:inline-block lg:text-1xl xl:text-2xl px-4 py-3 leading-none rounded-tl-3xl rounded-br-3xl bg-gray-300 hover:text-gray-100 hover:bg-gray-400 mt-4 md:mt-0 tarnsition duration-300 font-bold text-green-700">Hubungi Kami</a>
+                    class="border block lg:inline-block lg:text-1xl xl:text-1xl px-4 py-3 leading-none rounded-tl-3xl rounded-br-3xl bg-green-400 hover:text-gray-100 hover:bg-gray-400 mt-4 md:mt-0 tarnsition duration-300 font-bold text-white">Hubungi Kami</a>
             </div>
         </div>
     </div>
@@ -77,10 +77,10 @@
 
 <!--Hero-->
 <section id="beranda">
-<div class="top-0 w-full h-screen bg-cover bg-green-pattern">
+<div class="top-0 w-screen h-screen" style="background-image: url(/public/img/bg-baru.png);">
     <div class="container mx-auto">
         <div class="2xl:flex xl:flex lg:grid md:grid sm:grid xl:justify-between lg:grid-cols-1 md:grid-cols-1 sm:grid-cols-1">
-            <div class="xl:w-1/2 2xl:pt-72 xl:pt-32 md:pt-24 sm:pt-16">
+            <div class="xl:w-1/2 2xl:pt-72 xl:pt-52 md:pt-24 sm:pt-16">
                 <p class="text-white text-md text-center 2xl:text-left xl:text-left md:text-center 2xl:text-5xl xl:text-4xl md:text-3xl sm:text-2xl font-bold leading-tight animate__animated animate__fadeInUp">Penyedia <strong class="text-green-300 filter drop-shadow-lg">Layanan AC</strong> Terbaik <strong class="text-green-300">di Nusantara</strong></p>
                 <p class="text-white text-md text-center pt-3 2xl:pt-7 xl:pt-5 md:pt-5 2xl:mt-2 2xl:text-3xl xl:text-2xl md:text-2xl md:text-center xl:text-left animate__animated animate__fadeInUp">Tetap Nyaman di ruangan Anda, Kami akan memberikan <strong>layanan terbaik</strong> untuk pendingin ruangan Anda</p>
                 <div class="flex place-content-center pt-2 2xl:pt-14 xl:pt-14 md:pt-4 md:place-content-center xl:place-content-end 2xl:place-content-end mt-4 md:pt-0 animate__animated animate__fadeInUp">
@@ -89,7 +89,7 @@
                 </div>
             </div>
             <div class="relative flex pt-10 2xl:pt-72 xl:pt-24 md:pt-24">
-                <img src="/public/img/undraw_Chilling_re_4iq9.svg" class="inline-photo" style="width: 100%; height: 100%; max-width: fit-content; max-height: fit-content;" alt="">
+                <img src="/public/img/head.svg" class="inline-photo" style="width: 100%; height: 100%; max-width: fit-content; max-height: fit-content;" alt="">
             </div>
         </div>
     </div>
@@ -104,7 +104,7 @@
         <!--Card 1-->
         <div data-aos="flip-left" data-aos-duration="1500" data-aos-offset="300">
         <div class="rounded overflow-hidden shadow-xl">
-          <img class="w-full" src="/public/img/sewa_pendingin.png">
+          <img class="w-full" src="/public/img/sewa-ac.png">
           <div class="px-6 py-4">
             <div class="font-bold md:text-xl xl:text-2xl mb-2 text-center font-Glory">Sewa Pendingin</div>
             <p class="text-gray-700 md:text-md xl:text-1xl text-center">
@@ -117,7 +117,7 @@
         <!--Card 2-->
         <div data-aos="flip-left" data-aos-duration="1500" data-aos-offset="300">
         <div class="rounded overflow-hidden shadow-xl">
-          <img class="w-full" src="/public/img/servis_rutin.png">
+          <img class="w-full" src="/public/img/servis-rutin.png">
           <div class="px-6 py-4">
             <div class="font-bold md:text-xl xl:text-2xl mb-2 text-center font-Glory">Servis Rutin</div>
             <p class="text-gray-700 md:text-md xl:text-1xl text-center">
@@ -130,7 +130,7 @@
         <!--Card 3-->
         <div data-aos="flip-left" data-aos-duration="1500" data-aos-offset="300">
         <div class="rounded overflow-hidden shadow-xl">
-          <img class="w-full" src="/public/img/perbaikan.png">
+          <img class="w-full" src="/public/img/servis-pelanggan.png">
           <div class="px-6 py-4">
             <div class="font-bold md:text-xl xl:text-2xl mb-2 text-center font-Glory">Servis pelanggan</div>
             <p class="text-gray-700 md:text-base xl:text-1xl text-center">
@@ -147,9 +147,9 @@
 <!--produk-->
 <section id="produk">
 <div class="grid grid-cols-1 xl:grid-cols-2 md:grid-cols-1 2xl:grid-cols-2 pt-16">
-    <div class="grid 2xl:pt-24" style="background-image: url(/public/img/undraw_Relaxing_at_home_re_mror.png); background-size: cover; height: 31rem;">
+    <div class="grid 2xl:pt-24" style="background-image: url(/public/img/undraw_Relaxing_at_home_re_mror.svg); background-size: cover; height: 31rem;">
         <div>
-        <p class="text-1xl 2xl:text-3xl text-center font-bold md:pt-32 2xl:pt-1 md:p-3">Sesuaikan Produk Dengan Kebutuhan Anda</p>
+        <p class="text-1xl xl:text-2xl text-center font-bold md:pt-32 xl:pt-1 md:p-3">Sesuaikan Produk Dengan Kebutuhan Anda</p>
         <p class="text-center text-md md:p-2 2xl:text-1xl">Berbagai Variasi produk untuk kebutuhan perusahaan anda</p>
         <p class="text-center text-md p-1 2xl:text-1xl xl:text-1xl">Single Split | Multi Split | Air Purifer</p>
         <p class="text-center text-md p-1 2xl:text-1xl xl:text-1xl">VRV Home Series | Multi NX-32</p>
@@ -173,7 +173,7 @@
 <h1 class="text-center text-1xl md:text-2xl xl:text-4xl font-bold md:pt-14 xl:pt-24">Kenapa Memilih Kami</h1>
 <div class="p-16 pr-28 grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-4 xl:gap-10 place-content-center">
     <div data-aos="fade-right" data-aos-duration="3000">
-        <img src="/public/img/servis.png" class="pl-24" style="width: 30rem;" alt="">
+        <img src="/public/img/servis-rutin-2.png" class="pl-24" style="width: 30rem;" alt="">
     </div>
     <div data-aos="fade-left" data-aos-duration="3000">
         <p class="text-center md:text-left  2xl:text-left xl:text-left md:text-1xl xl:text-2xl font-bold pb-3 xl:pt-5">Servis Rutin Tiap Bulan</p>
@@ -187,7 +187,7 @@
         <p class="text-center md:text-justify  2xl:text-left xl:text-left md:text-md xl:text-1xl">Jika unit masaih dalam masa garansi akan kami ganti dengan unit yang baru tidak perlu khawatir dengan biaya tambahan lainnya</p>
     </div>
     <div data-aos="fade-right" data-aos-duration="3000">
-        <img src="/public/img/call_center.png" class="pl-24" style="width: 25rem;" alt="">
+        <img src="/public/img/call-center.png" class="pl-24" style="width: 25rem;" alt="">
     </div>
     <div data-aos="fade-left" data-aos-duration="3000">
         <p class="text-center md:text-left  2xl:text-left xl:text-left md:text-1xl xl:text-2xl font-bold pb-3 pt-5">Bantuan 24/7</p>
@@ -212,43 +212,67 @@
     <!--Card Jakarta-->
     <div data-aos="zoom-in" data-aos-duration="2000">
     <div class="rounded shadow-lg transform hover:-translate-y-1 overscroll-auto cursor-pointer">
-        <p class="xl:text-7xl md:text-5xl" style="position: absolute; top: 20px; left: 0; width: 100%; height: 100px; color:rgba(156, 96, 233, 0.767); text-align: center; font-weight: bold;"><a href="https://domain1.sewaac.co.id/" target="_blank">Jakarta</a></p>
         <img class="w-full hover:opacity-25" src="/public/img/sewa-ac-1.PNG">
+        <div class="relative px-4 -mt-16 pb-3">
+            <div class="bg-white p-6 rounded-lg shadow-lg">
+             <h4 class="mt-1 text-2xl text-center font-semibold uppercase leading-tight truncate"><a href="https://domain1.sewaac.co.id/" target="_blank">Jakarta</a></h4>
+           </div>
+        </div>
     </div>
     </div>
     <!--Card Medan-->
     <div data-aos="zoom-in" data-aos-duration="2000">
     <div class="rounded shadow-lg transform hover:-translate-y-1 overscroll-auto cursor-pointer">
-        <p class="xl:text-7xl md:text-5xl" style="position: absolute; top: 20px; left: 0; width: 100%; height: 100px; color: rgb(201, 97, 57); text-align: center; font-weight: bold;"><a href="https://domain2.sewaac.co.id/" target="_blank">Medan</a></p>
         <img class="w-full hover:opacity-25" src="/public/img/sewa-ac-2.PNG">
+        <div class="relative px-4 -mt-16 pb-3">
+            <div class="bg-white p-6 rounded-lg shadow-lg">
+             <h4 class="mt-1 text-2xl text-center font-semibold uppercase leading-tight truncate"><a href="https://domain2.sewaac.co.id/" target="_blank">Medan</a></h4>
+           </div>
+        </div>
     </div>
     </div>
     <!--Card Bali-->
     <div data-aos="zoom-in" data-aos-duration="2000">
         <div class="rounded shadow-lg transform hover:-translate-y-1 overscroll-auto cursor-pointer">
-        <p class="xl:text-7xl md:text-5xl" style="position: absolute; top: 20px; left: 0; width: 100%; height: 100px; color: rgba(131, 142, 240, 0.877); text-align: center; font-weight: bold;"><a href="https://domain3.sewaac.co.id/" target="_blank">Bali</a></p>
         <img class="w-full hover:opacity-25" src="/public/img/sewa-ac-3.PNG">
+        <div class="relative px-4 -mt-16 pb-3">
+            <div class="bg-white p-6 rounded-lg shadow-lg">
+             <h4 class="mt-1 text-2xl text-center font-semibold uppercase leading-tight truncate"><a href="https://domain3.sewaac.co.id/" target="_blank">Bali</a></h4>
+           </div>
+        </div>
     </div>
     </div>
     <!--Card Surabaya-->
     <div data-aos="zoom-in" data-aos-duration="2000">
     <div class="rounded shadow-lg transform hover:-translate-y-1 overscroll-auto cursor-pointer">
-        <p class="xl:text-7xl md:text-5xl" style="position: absolute; top: 20px; left: 0; width: 100%; height: 100px; color: rgb(48, 185, 219); text-align: center; font-weight: bold;"><a href="https://domain4.sewaac.co.id/" target="_blank">Surabaya</a></p>
         <img class="w-full hover:opacity-25" src="/public/img/sewa-ac-4.PNG">
+        <div class="relative px-4 -mt-16 pb-3">
+            <div class="bg-white p-6 rounded-lg shadow-lg">
+             <h4 class="mt-1 text-2xl text-center font-semibold uppercase leading-tight truncate"><a href="https://domain4.sewaac.co.id/" target="_blank">Surabaya</a></h4>
+           </div>
+        </div>
     </div>
     </div>
     <!--Card Makasar-->
     <div data-aos="zoom-in" data-aos-duration="2000">
         <div class="rounded shadow-lg transform hover:-translate-y-1 overscroll-auto cursor-pointer">
-        <p class="xl:text-7xl md:text-5xl" style="position: absolute; top: 20px; left: 0; width: 100%; height: 100px; color: rgb(35, 151, 145); text-align: center; font-weight: bold;"><a href="https://domain5.sewaac.co.id/" target="_blank">Makasar</a></p>
         <img class="hover:opacity-25 w-full" src="/public/img/sewa-ac-5.PNG">
+        <div class="relative px-4 -mt-16 pb-3">
+            <div class="bg-white p-6 rounded-lg shadow-lg">
+             <h4 class="mt-1 text-2xl text-center font-semibold uppercase leading-tight truncate"><a href="https://domain5.sewaac.co.id/" target="_blank">Makasar</a></h4>
+           </div>
+        </div>
     </div>
     </div>
     <!--Card Yogyakarta-->
     <div data-aos="zoom-in" data-aos-duration="2000">
     <div class="rounded shadow-lg transform hover:-translate-y-1 overscroll-auto cursor-pointer">
-        <p class="xl:text-7xl md:text-5xl" style="position: absolute; top: 20px; left: 0; width: 100%; height: 100px; color: rgb(216, 64, 64); text-align: center; font-weight: bold;"><a href="https://domain6.sewaac.co.id/" target="_blank">Yogyakarta</a></p>
         <img class="w-full hover:opacity-25" src="/public/img/sewa-ac-6.PNG">
+        <div class="relative px-4 -mt-16 pb-3">
+            <div class="bg-white p-6 rounded-lg shadow-lg">
+             <h4 class="mt-1 text-2xl text-center font-semibold uppercase leading-tight truncate"><a href="https://domain6.sewaac.co.id/" target="_blank">Yogyakarta</a></h4>
+           </div>
+        </div>
     </div>
     </div>
 </div>
@@ -288,7 +312,7 @@
 </section>
 
 <!--footer-->
-    <div class="" style="background-color: #0b916f;">
+    <div class="" style="background-color: #FEAA52;">
     <div class="container mx-auto px-6 lg:px-20 py-12">
         <div class="lg:flex">
             <div class="w">
@@ -312,7 +336,7 @@
                             <li class="pt-1 pb-2"><a href="#beranda"> Beranda </a></li>
                             <li class="pt-1 pb-2"><a href="#layanan"> Layanan </a></li>
                             <li class="pt-1 pb-2"><a href="#produk"> Produk </a></li>
-                            <li class="pt-1 pb-2"><a href="#keuanggulan"> Keunggulan </a></li>
+                            <li class="pt-1 pb-2"><a href="#keunggulan"> Keunggulan </a></li>
                             <li class="pt-1 pb-2"><a href="#cabang"> Cabang </a></li>
                             <li class="pt-1 pb-2"><a href="#kontak"> Kontak </a></li>
                         </ul>
@@ -335,7 +359,7 @@
     </div>
 </div>
 <!--Footer Bottom-->
-    <div class="" style="background-color: #047857;">
+    <div class="" style="background-color: #f89934;">
         <div class="container mx-auto px-6 lg:px-20 py-6">
             <div class="flex justify-center text-gray-700 mb-1">
                 @ 2021 <span class="font-bold">SewaAC.co.id</span>All right reserved
